height fixed, profile wraps

--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -2,7 +2,6 @@
     background-image: url("../../Img/lamar.jpg");
     background-repeat: no-repeat;
     background-position: center;
-    height:100%;
     background-size: cover;
 }
 
